fix the flex wrap for better look

--- a/src/components/ImageSelectore/imageSelectore.module.css
+++ b/src/components/ImageSelectore/imageSelectore.module.css
@@ -21,4 +21,5 @@
 .imageWcolor {
   display: flex;
   margin-left: auto;
+  flex-wrap: wrap;
 }
